# ft-turing42

./: .gitignore  README.md  dune-project  ft_turing.opam  index.html  unary_add.json
.github/workflows/: deploy.yml
api/: index.html
api/ft_turing/: index.html
api/ft_turing/Ft_turing/: index.html
api/ft_turing/Ft_turing__Execute/: index.html
api/ft_turing/Ft_turing__Lang/: index.html
api/ft_turing/Ft_turing__Pp/: index.html
coverage/: index.html
coverage/src/: execute.ml.html  lang.ml.html  pp.ml.html  utils.ml.html
doc/: index.html
machines/: 02n.json  palindrome.json
src/: dune  execute.ml  ft_turing.ml  lang.ml  main.ml  pp.ml  utils.ml
test/: dune  machine_io.ml  test_ft_turing.ml  test_parser.ml  test_utils.ml
test/test_machines/: 02n.json  0n1n.json  INVALID_ACTION_FIELD.json  INVALID_ALPHABET.json  INVALID_DUPLICATE_STATE.json  INVALID_DUPLICATE_STATE_DECLARATION.json  INVALID_DUPLICATE_TRANSITION.json  INVALID_FINAL_STATE.json  INVALID_TOSTATE_FIELD.json  INVALID_TYPE_ASSOC_INT.json  INVALID_TYPE_ASSOC_LIST.json  INVALID_TYPE_LIST_ASSOC.json  INVALID_TYPE_LIST_INT.json  INVALID_TYPE_LIST_NULL.json  INVALID_TYPE_MACHINE_LIST.json  INVALID_TYPE_STATE_LIST.json  INVALID_TYPE_STRING_ASSOC.json  INVALID_TYPE_STRING_INT.json  INVALID_TYPE_STRING_LIST.json  INVALID_TYPE_TRANSITION.json  INVALID_TYPE_TRANSITION_ASSOC.json  INVALID_TYPE_TRANSITION_ASSOC_INT.json  INVALID_TYPE_TRANSITION_ASSOC_LIST.json  INVALID_TYPE_TRANSITION_INT.json  VALID_MULTIPLE_FINALS.json  palindrome.json  test_unary_sub_VALID.json  unary_add.json
(+5 files in other folders)
